syntax = "proto3";

import "google/protobuf/empty.proto";
import "step.proto";
import "google/api/annotations.proto";

option go_package = "github.com/Galaxy-Railway/GGargantua/api/protobuf";

package GGargantua.v1.proto;

message JobUuid{
  string Uuid = 1;
}

enum JobProgress{
  CREATED = 0;
  PROCESSING = 1;
  FINISHED = 2;
  FAILED = 3;

  CANCELING = 4;
  CANCELED = 5;
}

message JobStatus{
  string Uuid = 1;
  JobProgress Progress = 2;
  string Reason = 3;
}

message UpdateJobContent {
  JobUuid Uuid = 1;
  Step MainStep = 2;
}

message JobResult {
    JobStatus Status = 1;
    StepResult Result = 2;
}

service JobService{
  rpc CreateAJob(google.protobuf.Empty) returns (JobUuid){
    option (google.api.http) = {
      post: "/v1/jobs"
    };
  };
  rpc StartAJob(UpdateJobContent) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/v1/jobs/{Uuid.Uuid}/start"
    };
  };
  rpc CancelAJob(JobUuid) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/v1/jobs/{Uuid}/cancel"
    };
  };
  rpc GetJobResult(JobUuid) returns (JobResult){
    option (google.api.http) = {
      get: "/v1/jobs/{Uuid}/result"
    };
  };
}